mobile and tablet responsive complete

--- a/index.html
+++ b/index.html
@@ -23,12 +23,39 @@
       </div>
     </header>
     <!-- header end -->
+
+    <!-- main part -->
     <main>
-      <section class="container"></section>
-      <!-- popular product collection -->
+      <!-- ------------------------------------
+            top banner section
+      ----------------------------------- -->
+      <section class="container">
+        <div class="top-banner">
+          <div class="top-text">
+            <h1>Start your Journey as Influencer</h1>
+            <p>
+              Influencer and social media educator, Christina Galbato, shares
+              her top tips to become an Instagram influencer and how to succeed
+              on the platform.
+            </p>
+            <br />
+            <a class="button" href=""
+              >Prebook Now <i class="fas fa-arrow-right"></i
+            ></a>
+          </div>
+          <div class="top-image">
+            <img src="images/main-camera.png" alt="" />
+          </div>
+        </div>
+      </section>
+
+      <!-- ------------------------------------
+          popular collection section
+      ----------------------------------- -->
+
       <section class="container">
         <div class="popular-collection">
-          <h1>Popular Collection</h1>
+          <h1 class="collection-title">Popular Collection</h1>
           <div class="products">
             <div class="product">
               <img src="images/tripod.png" alt="" />
@@ -173,6 +200,122 @@
           </div>
         </div>
       </section>
+
+      <!-- ------------------------------------
+          photo frame section
+      ----------------------------------- -->
+
+      <section class="container">
+        <h1 class="collection-title">Top Photography</h1>
+        <div class="photo-album">
+          <div class="photo-frame">
+            <div class="photo">
+              <img src="images/album/photo-1.png" alt="" />
+            </div>
+            <div class="photo-detail">
+              <h3>Travel Photography</h3>
+              <p>
+                Travel photography is a genre of photography that may involve
+                the documentation of an area's landscape, people, cultures,
+                customs, and history.
+              </p>
+            </div>
+          </div>
+          <div class="photo-frame">
+            <div class="photo">
+              <img src="images/album/photo-2.png" alt="" />
+            </div>
+            <div class="photo-detail">
+              <h3>Biggest Building</h3>
+              <p>
+                America defines a travel photo as an image that expresses the
+                feeling of a time and place, portrays a land, its people, or a
+                culture in its natural state,
+              </p>
+            </div>
+          </div>
+          <div class="photo-frame">
+            <div class="photo">
+              <img src="images/album/photo-3.png" alt="" />
+            </div>
+            <div class="photo-detail">
+              <h3>Coconut Tree</h3>
+              <p>
+                As travel has become more accessible, more and more, the genre
+                is opening up to amateurs and professionals alike. Amateur
+                Travel photography.
+              </p>
+            </div>
+          </div>
+          <div class="photo-frame">
+            <div class="photo">
+              <img src="images/album/photo-4.png" alt="" />
+            </div>
+            <div class="photo-detail">
+              <h3>Travel Vlog</h3>
+              <p>
+                Besides the travel publications like National Geographic
+                Traveler the demand for this genre exists in industries like
+                Travel, Photo Education, etc
+              </p>
+            </div>
+          </div>
+          <div class="photo-frame">
+            <div class="photo">
+              <img src="images/album/photo-5.png" alt="" />
+            </div>
+            <div class="photo-detail">
+              <h3>Office Room</h3>
+              <p>
+                Photographers like Steve McCurry are often commissioned to shoot
+                commercial advertising work using their skills from travel and
+                documentary photograph.
+              </p>
+            </div>
+          </div>
+          <div class="photo-frame">
+            <div class="photo">
+              <img src="images/album/photo-6.png" alt="" />
+            </div>
+            <div class="photo-detail">
+              <h3>Eiffel Tower</h3>
+              <p>
+                The Eiffel Tower is the most visited monument with an entrance
+                fee in the world; 6.91 million people ascended it in 2015. The
+                Tower was made a Monument
+              </p>
+            </div>
+          </div>
+        </div>
+        <br />
+        <div class="album-button">
+          <a class="button" href=""
+            >See More <i class="fas fa-arrow-right"></i
+          ></a>
+        </div>
+      </section>
     </main>
+
+    <!-- ------------------------------------
+          footer start
+      ----------------------------------- -->
+
+    <footer>
+      <div class="footer-text">
+        <h1>Influencer products</h1>
+        <p>Copyright &copy; 2020 influencer products</p>
+        <p>All rights reserved</p>
+      </div>
+      <div class="footer-icon">
+        <a href=""><i class="fab fa-facebook-square"></i></a>
+        <a href=""><i class="fab fa-instagram-square"></i></a>
+        <a href=""><i class="fab fa-youtube"></i></a>
+        <a href=""><i class="fab fa-twitter-square"></i></a>
+      </div>
+    </footer>
+
+    <!-- ------------------------------------
+          footer end
+      ----------------------------------- -->
   </body>
 </html>
